# chatbot-frontend

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-dev.yaml  deploy-prod.yaml  deploy-staging.yaml  release-dev.yaml  release-prod.yaml  release-staging.yaml
.streamlit/: config.toml
charts/basedosdados-chatbot-frontend/: Chart.yaml  values.yaml
charts/basedosdados-chatbot-frontend/templates/: deployment.yaml  ingress.yaml  service.yaml
frontend/: main.py  settings.py
frontend/api/: api_client.py
frontend/components/: __init__.py  card.py  chat_page.py  disclaimer.py  stylable_containers.py  three_dots.py  typewriter.py
frontend/datatypes/: __init__.py  datatypes.py
frontend/exceptions/: __init__.py
frontend/loguru_logging/: __init__.py  loguru_logging.py
frontend/pages/: chat.py  home.py
frontend/utils/: __init__.py  constants.py  icons.py  logging.py  logos.py  utils.py
