[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["vrtornisiello <vrtornisiello@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
pydantic = "^2.11.2"
streamlit = "^1.44.1"
streamlit-extras = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
