[project]
name = "frontend"
version = "0.1.0"
description = ""
authors = [
    {name = "vrtornisiello", email = "vrtornisiello@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "streamlit (==1.49.0)",
    "streamlit-extras (==0.5.5)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
